--- a/work/first/index.html
+++ b/work/first/index.html
@@ -77,6 +77,9 @@
       $('#q2').css('background', '#ffc0cb');
     })
 // 第3問  id='q3'の要素をクリックしたら2秒かけてフェードアウトさせよ。
+    $('#q3').on('click', function() {
+      $('#q3').fadeOut(2000);
+    })
 // 第4問  id='q4'の要素をクリックしたらこの要素の前後とこの要素内の前後にテキストを挿入せよ。
 // 第5問  id='q5'の要素をクリックしたらこの要素にlargeというクラスを付与せよ。
 // 第6問  id='q6'の要素をクリックしたらこの要素を2秒かけてmargin-topとmargin-leftを100pxの位置に移動させよ。
