--- a/work/first/index.html
+++ b/work/first/index.html
@@ -75,12 +75,17 @@
 // 第2問  id='q2'の要素をクリックしたら背景色をピンクにせよ。
     $('#q2').on('click', function() {
       $('#q2').css('background', '#ffc0cb');
-    })
+    });
 // 第3問  id='q3'の要素をクリックしたら2秒かけてフェードアウトさせよ。
     $('#q3').on('click', function() {
       $('#q3').fadeOut(2000);
-    })
+    });
 // 第4問  id='q4'の要素をクリックしたらこの要素の前後とこの要素内の前後にテキストを挿入せよ。
+  $('#q4').on('click', function() {
+    $('#q4').text('DOMの中の前Q4DOMの中の後');
+    $('#q4').before('DOMの前');
+    $('#q4').after('DOMの後');
+  });
 // 第5問  id='q5'の要素をクリックしたらこの要素にlargeというクラスを付与せよ。
 // 第6問  id='q6'の要素をクリックしたらこの要素を2秒かけてmargin-topとmargin-leftを100pxの位置に移動させよ。
 // 第7問  id='q7'の子要素をクリックしたら、その要素のインデックス（何番目か）をconsole.log()とalert()を用いて表示させよ。
