--- a/work/first/index.html
+++ b/work/first/index.html
@@ -91,6 +91,12 @@
     $('#q5').addClass('large');
   });
 // 第6問  id='q6'の要素をクリックしたらこの要素を2秒かけてmargin-topとmargin-leftを100pxの位置に移動させよ。
+  $('#q6').on('click', function() {
+    $('#q6').animate({
+      marginTop: '+=100',
+      marginLeft: '+=100'
+    }, 2000);
+  });
 // 第7問  id='q7'の子要素をクリックしたら、その要素のインデックス（何番目か）をconsole.log()とalert()を用いて表示させよ。
 // 第8問  id='q8'の要素をhoverしたらlargeというクラスを付与し、hoverが外れたら、クラスを削除せよ。
 // 第9問  id='q9'の要素をクリックしたらこの要素に設定してあるdata属性をconsoleに表示せよ。
