--- a/work/first/index.html
+++ b/work/first/index.html
@@ -104,6 +104,14 @@
     alert(index);
   });
 // 第8問  id='q8'の要素をhoverしたらlargeというクラスを付与し、hoverが外れたら、クラスを削除せよ。
+  $('#q8').on({
+    'mouseenter': function() {
+      $('#q8').addClass('large');
+    },
+    'mouseleave': function() {
+      $('#q8').removeClass('large');
+    }
+  });
 // 第9問  id='q9'の要素をクリックしたらこの要素に設定してあるdata属性をconsoleに表示せよ。
 // 第10問 id='q10'の子要素をクリックしたら、その要素のインデックスと等しいid='q11'の子要素にlargeというクラスを追加せよ。
   });
