--- a/work/first/index.html
+++ b/work/first/index.html
@@ -113,6 +113,10 @@
     }
   });
 // 第9問  id='q9'の要素をクリックしたらこの要素に設定してあるdata属性をconsoleに表示せよ。
+  $('#q9').on('click', function() {
+    var data = $('#q9').attr('data-text');
+    console.log(data);
+  });
 // 第10問 id='q10'の子要素をクリックしたら、その要素のインデックスと等しいid='q11'の子要素にlargeというクラスを追加せよ。
   });
 </script>
