--- a/work/first/index.html
+++ b/work/first/index.html
@@ -81,44 +81,48 @@
       $('#q3').fadeOut(2000);
     });
 // 第4問  id='q4'の要素をクリックしたらこの要素の前後とこの要素内の前後にテキストを挿入せよ。
-  $('#q4').on('click', function() {
-    $('#q4').text('DOMの中の前Q4DOMの中の後');
-    $('#q4').before('DOMの前');
-    $('#q4').after('DOMの後');
-  });
+    $('#q4').on('click', function() {
+      $('#q4').text('DOMの中の前Q4DOMの中の後');
+      $('#q4').before('DOMの前');
+      $('#q4').after('DOMの後');
+    });
 // 第5問  id='q5'の要素をクリックしたらこの要素にlargeというクラスを付与せよ。
-  $('#q5').on('click', function() {
-    $('#q5').addClass('large');
-  });
+    $('#q5').on('click', function() {
+      $('#q5').addClass('large');
+    });
 // 第6問  id='q6'の要素をクリックしたらこの要素を2秒かけてmargin-topとmargin-leftを100pxの位置に移動させよ。
-  $('#q6').on('click', function() {
-    $('#q6').animate({
-      marginTop: '+=100',
-      marginLeft: '+=100'
-    }, 2000);
-  });
+    $('#q6').on('click', function() {
+      $('#q6').animate({
+        marginTop: '+=100',
+        marginLeft: '+=100'
+      }, 2000);
+    });
 // 第7問  id='q7'の子要素をクリックしたら、その要素のインデックス（何番目か）をconsole.log()とalert()を用いて表示させよ。
-  $('#q7 > li').on('click', function() {
-    var index = $(this).index();
-    console.log(index);
-    alert(index);
-  });
+    $('#q7 li').on('click', function() {
+      var index = $(this).index();
+      console.log(index);
+      alert(index);
+    });
 // 第8問  id='q8'の要素をhoverしたらlargeというクラスを付与し、hoverが外れたら、クラスを削除せよ。
-  $('#q8').on({
-    'mouseenter': function() {
-      $('#q8').addClass('large');
-    },
-    'mouseleave': function() {
+    $('#q8').on({
+      'mouseenter': function() {
+        $('#q8').addClass('large');
+      },
+      'mouseleave': function() {
       $('#q8').removeClass('large');
-    }
-  });
+      }
+    });
 // 第9問  id='q9'の要素をクリックしたらこの要素に設定してあるdata属性をconsoleに表示せよ。
-  $('#q9').on('click', function() {
-    var data = $('#q9').attr('data-text');
-    console.log(data);
-  });
+    $('#q9').on('click', function() {
+      var data = $('#q9').attr('data-text');
+      console.log(data);
+    });
 // 第10問 id='q10'の子要素をクリックしたら、その要素のインデックスと等しいid='q11'の子要素にlargeというクラスを追加せよ。
-  });
+    $('#q10 li').on('click', function() {
+      var q10Index = $(this).index();
+      $('#q11 li').eq(q10Index).addClass('large');
+      })
+    });
 </script>
 </body>
 </html>
