--- a/work/first/index.html
+++ b/work/first/index.html
@@ -93,8 +93,8 @@
 // 第6問  id='q6'の要素をクリックしたらこの要素を2秒かけてmargin-topとmargin-leftを100pxの位置に移動させよ。
     $('#q6').on('click', function() {
       $('#q6').animate({
-        marginTop: '+=100',
-        marginLeft: '+=100'
+        marginTop: '100px',
+        marginLeft: '100px'
       }, 2000);
     });
 // 第7問  id='q7'の子要素をクリックしたら、その要素のインデックス（何番目か）をconsole.log()とalert()を用いて表示させよ。
