--- a/work/third/index.html
+++ b/work/third/index.html
@@ -30,6 +30,12 @@
 // .eq() 引数に応じたindexの要素を指定します。
 // .addClass() クラスを追加します。
 // .removeClass() クラスを削除します。
+  $('.nav').children('li').on('click', function() {
+    var index = $(this).index();
+    console.log(index);
+    $('.contents').children('li').addClass('is-hidden'); // クリック時一度全てのcontentsクラス内のli要素に対し、is-hiddenを追加
+    $('.contents').children('li').eq(index).removeClass('is-hidden'); // クリックされたタブに対応するcontentsをindexで指定し、is-hiddenを削除
+  });
 </script>
 </body>
 </html>
