--- a/work/fourth/index.html
+++ b/work/fourth/index.html
@@ -56,6 +56,18 @@
 // .next() 要素の隣の要素を取得します。
 // .children() 要素の子要素を取得します。
 // .stop() 現在動作中のアニメーション処理を全て中止します。
+  $('.menu__list').children('li').hover(function() {
+    $(this).children('.menu__list__title').next().stop().slideDown();
+  }, function() {
+    $(this).children('.menu__list__title').next().stop().slideUp();
+  });
+
+// 別回答
+  // $('.menu__list').children('li').hover(function() {
+  //   $(this).children('.menu__list__childList').stop().slideDown();
+  // }, function() {
+  //   $(this).children('.menu__list__childList').stop().slideUp();
+  // });
 </script>
 </body>
 </html>
