--- a/work/first/index.html
+++ b/work/first/index.html
@@ -73,7 +73,7 @@
 // 第1問  id='q1'の要素の文字色を赤色にせよ。
     $('#q1').css('color', '#f00');
 // 第2問  id='q2'の要素をクリックしたら背景色をピンクにせよ。
-    $('#q2').on('click mouseenter', function() {
+    $('#q2').on('click', function() {
       $(this).css('background', '#ffc0cb');
     });
 // 第3問  id='q3'の要素をクリックしたら2秒かけてフェードアウトさせよ。
