--- a/work/third/index.html
+++ b/work/third/index.html
@@ -33,8 +33,12 @@
   $('.nav').children('li').on('click', function() {
     var index = $(this).index();
     console.log(index);
-    $('.contents').children('li').addClass('is-hidden'); // クリック時一度全てのcontentsクラス内のli要素に対し、is-hiddenを追加
-    $('.contents').children('li').eq(index).removeClass('is-hidden'); // クリックされたタブに対応するcontentsをindexで指定し、is-hiddenを削除
+    $('.contents')
+      .children('li')
+      .addClass('is-hidden')
+      .eq(index)
+      .removeClass('is-hidden'); // クリック時一度全てのcontentsクラス内のli要素に対し、is-hiddenを追加
+    // $('.contents').children('li').eq(index).removeClass('is-hidden'); // クリックされたタブに対応するcontentsをindexで指定し、is-hiddenを削除
   });
 </script>
 </body>
