--- a/work/fifth/index.html
+++ b/work/fifth/index.html
@@ -98,22 +98,19 @@
 // .change() セレクトボックスの値の変更をキャッチする関数
 // $().each() DOM要素を1つずつループ処理をする（ループ内で$(this)を使うと要素がひとつずつ取得できる）
 
-$('.select').on('click', function() { // class = selectにイベント:クリックが発生した時
-  $(this).change(style); // selectの値の変更をキャッチするchangeメソッドにstyleという引数を指定
-  function style() { // changeメソッドで定義された引数の処理
-    var value = $(this).val(); // 選択された要素(option)のvalueを取得し変数valueに代入
-    console.log(value);
-    $('.list').children('li').each(function() { // listクラスの子要素liに対してループ処理
-      var type = $(this).data('category-type'); // 取得したcategory-typeを変数typeに代入
-      if ( value === type) { // valueがcategory-typeと一致する場合
-        $(this).show(); // 取得した要素を表示
-      } else if (value === 'all') { // valueがallの場合
-        $('li').show(); // li要素を全てshow
-      } else { // それ以外の(valueとtypeが一致しない)場合
-        $(this).hide(); // 取得した要素をhide
-      }
-    });
-  };
+$('.select').on('change', function() { // class = selectにイベント:クリックが発生した時
+  var value = $(this).val(); // 選択された要素(option)のvalueを取得し変数valueに代入
+  console.log(value);
+  $('.list').children('li').each(function() { // listクラスの子要素liに対してループ処理
+    var type = $(this).data('category-type'); // 取得したcategory-typeを変数typeに代入
+    if (value === type) { // valueがcategory-typeと一致する場合
+      $(this).show(); // 取得した要素を表示
+    } else if (value === 'all') { // valueがallの場合
+      $('.list').children('li').show(); // li要素を全てshow $(this)に置き換え可能
+    } else { // それ以外の(valueとtypeが一致しない)場合
+      $(this).hide(); // 取得した要素をhide
+    }
+  });
 });
 </script>
 </body>
