セミコロン追加

--- a/work/eighth/index.html
+++ b/work/eighth/index.html
@@ -54,7 +54,7 @@
     });
   });
   $(window).on('scroll', function() {
-    var current = $(this).scrollTop()
+    var current = $(this).scrollTop();
     if (current > 100) {
       $('.scrollTopBtn').fadeIn();
     } else {
