--- a/work/ninth/index.html
+++ b/work/ninth/index.html
@@ -45,6 +45,15 @@
 // </li>
 //
 // このテンプレートに取得してきたオブジェクトを流し込みます。
+  $.ajax({
+    url: './data.json'
+  })
+  .done(function(data) {
+    $(data.colorsArray).each(function() {
+      console.log(this.colorName);
+      $('.colorList').append('<li class="colorList__item"><p class="colorList__title" style="background-color:' + this.hexValue + ';">' + this.colorName + '</p></li>');
+    });
+  });
 </script>
 </body>
 </html>
