--- a/work/tenth/index.html
+++ b/work/tenth/index.html
@@ -64,6 +64,27 @@
   //   // この中にデータ取得後の動きを記述していきます。
   // });
 //
+  $('#js-search-button').on('click', function() {
+    $('.lists__item').detach();
+    $.ajax({
+      url: 'https://app.rakuten.co.jp/services/api/BooksTotal/Search/20130522',
+      type: 'GET',
+      datatype: 'json',
+      data: {
+        // 「区分:サービス固有パラメーター」を確認して、必要な情報をdata内に入れましょう。
+        applicationId: '1019399324990976605', // (今回はこのIDを使用してください)
+        booksGenreId: '001',
+        keyword: $('#js-search-word').val()
+      }
+    })
+    .done(function(data) {
+      console.log(data);
+      $(data.Items).each(function() {
+        console.log(this.Item.title);
+        $('.lists').append('<li class="lists__item"><div class="lists__item__inner"><a href="" class="lists__item__link" target="_blank"><img src="' + this.Item.largeImageUrl + '" class="lists__item__img" alt=""><p class="lists__item__detail">作品名：' + this.Item.title + '</p><p class="lists__item__detail">作者 ：' + this.Item.author + '</p><p class="lists__item__detail">出版社：' + this.Item.publisherName + '</p></a></div></li>');
+      });
+    });
+  });
 </script>
 </body>
 </html>
