変数’templateを定義

--- a/work/ninth/index.html
+++ b/work/ninth/index.html
@@ -51,7 +51,13 @@
   .done(function(data) {
     $.each(data.colorsArray, function() {
       console.log(this.colorName);
-      $('.colorList').append('<li class="colorList__item"><p class="colorList__title" style="background-color:' + this.hexValue + ';">' + this.colorName + '</p></li>');
+      var template =
+        '<li class="colorList__item">' +
+          '<p class="colorList__title" style="background-color:' + this.hexValue + ';">' + this.colorName +
+          '</p>' +
+        '</li>';
+
+      $('.colorList').append(template);
     });
   });
 </script>
