--- a/work/tenth/index.html
+++ b/work/tenth/index.html
@@ -63,10 +63,9 @@
   // }).done(function(data) {
   //   // この中にデータ取得後の動きを記述していきます。
   // });
-//
-  $('#js-search-button').on('click', function() {
-    $('.lists__item').remove();
-    $.ajax({
+
+  function request() {
+    return $.ajax({
       url: 'https://app.rakuten.co.jp/services/api/BooksTotal/Search/20130522',
       type: 'GET',
       datatype: 'json',
@@ -74,19 +73,55 @@
         // 「区分:サービス固有パラメーター」を確認して、必要な情報をdata内に入れましょう。
         applicationId: '1019399324990976605', // (今回はこのIDを使用してください)
         booksGenreId: '001',
-        keyword: $('#js-search-word').val()
+        keyword: $('#js-search-word').val(),
+        hits: 20
       }
-    })
-    .done(function(data) {
-      console.log(data);
-      $.each(data.Items, function() {
-          $('.lists').append('<li class="lists__item"><div class="lists__item__inner"><a href="" class="lists__item__link" target="_blank"><img src="' + this.Item.largeImageUrl + '" class="lists__item__img" alt=""><p class="lists__item__detail">作品名：' + this.Item.title + '</p><p class="lists__item__detail">作者 ：' + this.Item.author + '</p><p class="lists__item__detail">出版社：' + this.Item.publisherName + '</p></a></div></li>');
-      });
-      // $(data.Items).each(function() {
-      //   console.log(this.Item.title);
-      //   $('.lists').append('<li class="lists__item"><div class="lists__item__inner"><a href="" class="lists__item__link" target="_blank"><img src="' + this.Item.largeImageUrl + '" class="lists__item__img" alt=""><p class="lists__item__detail">作品名：' + this.Item.title + '</p><p class="lists__item__detail">作者 ：' + this.Item.author + '</p><p class="lists__item__detail">出版社：' + this.Item.publisherName + '</p></a></div></li>');
-      // });
     });
+  }
+
+  function success(data) {
+    console.log(data);
+    if (data.hits === 0) {
+      var tryAgain =
+        '<div class="message">' +
+         '検索結果が見つかりませんでした。<br>' +
+         '別のキーワードで検索して下さい。' +
+        '</div>';
+      $('.search').after(tryAgain);
+    } else {
+      $.each(data.Items, function() {
+        var list =
+          '<li class="lists__item">' +
+            '<div class="lists__item__inner">' +
+              '<a href="" class="lists__item__link" target="_blank">' +
+                '<img src="' + this.Item.largeImageUrl + '" class="lists__item__img" alt="">' +
+                '<p class="lists__item__detail">作品名：' + this.Item.title + '</p>' +
+                '<p class="lists__item__detail">作者 ：' + this.Item.author + '</p>' +
+                '<p class="lists__item__detail">出版社：' + this.Item.publisherName + '</p>' +
+              '</a>' +
+            '</div>' +
+          '</li>';
+        $('.lists').append(list);
+      });
+    }
+  }
+
+  function error(data) {
+      console.log(data);
+      $('.message').remove();
+      var errorDetail =
+        '<div class="message">' +
+         data.responseText +
+        '</div>';
+      $('.search').after(errorDetail);
+  }
+
+  $('#js-search-button').on('click', function() {
+    $('.lists__item').remove();
+
+    request()
+    .done(success)
+    .fail(error);
   });
 </script>
 </body>
